[project]
name = "tdd-bdd-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "behave==1.2.6",
    "black==23.3.0",
    "compare==0.2b0",
    "coverage==7.1.0",
    "factory-boy==3.2.1",
    "flake8==5.0.4",
    "flask==2.2.3",
    "flask-sqlalchemy==3.0.2",
    "gunicorn==20.1.0",
    "honcho==1.1.0",
    "httpie==3.2.1",
    "nose==1.3.7",
    "pinocchio==0.4.3",
    "psycopg2-binary==2.9.3",
    "pylint==2.17.4",
    "python-dotenv==0.21.1",
    "requests==2.28.2",
    "selenium==4.1.0",
    "sqlalchemy==2.0.0",
    "werkzeug==2.2.3",
]
